--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 ide:
-  image: gray/dev:latest
+  image: gray/dev:v8
   privileged: true
   volumes:
     - /tmp/.X11-unix:/tmp/.X11-unix:ro
     - /dev/bus/usb:/dev/bus/usb
-    - ~/dev:/home/gray/dev
+    - ~/dev:/home/gray/dev:Z
   environment:
     - DISPLAY
   
-# sudo docker run -ti -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix 6ee4fb1d292a bash
+chide:
+  image: ch/dev:v1
+  volumes:
+    - /tmp/.X11-unix:/tmp/.X11-unix:ro
+  environment:
+    - DISPLAY
